# background-removal

./: .gitignore  fastapi_app.py  pyproject.toml
frontend/: index.html
frontend/images/: dainik-bhaskar.jfif
